# CareerPython

./: .clinerules  .cursorrules  .dockerignore  .env.docker  .env.example  .flake8  .gitignore  .mypy.ini  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEBUG_SETUP.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  Makefile.docker  Makefile.test  README.md  SECURITY.md  alembic.ini  create_company_user.py  create_simple_company_user.py  dependencies.py  docker-compose.test.yml  docker-compose.yml  main.py  models.py  mypy.ini  package-lock.json  pyproject.toml  pytest-docker.ini  pytest.ini  requirements-test.txt  requirements.txt  start_frontend.sh  test_file_save.py  update_candidates_current_phase.py
ai_docs/: README.md  architecture.md  critical-rules.md  http-layer.md  react-rules.md
alembic/: env.py
client-vite/: index.html  package-lock.json  package.json  tailwind.config.js
core/: __init__.py  config.py  container.py  database.py  event.py  event_bus.py  exceptions.py
docs/: CAREERPYTHON_SYSTEM_OVERVIEW.md  COMPANY.md  COMPANY_IMPLEMENTATION_ROADMAP.md  COMPANY_TASKS.md  JobPositionView.md  JobPositionView_ImplementationTasks.md  JobPositionWorkflow.md  JobPositionWorkflow_ImplementationPlan.md  RESUME_SHARING_STRATEGY.md  STORAGE_ABSTRACTION_DESIGN.md  STORAGE_USAGE.md  TODO_COMPANY_REGISTRATION.md  WORKFLOW3.md  WORKFLOW_IMPLEMENTATION_STATUS.md  WORKFLOW_IMPLEMENTATION_TASKS.md  WORKFLOW_SYSTEM_ARCHITECTURE.md  WORKFLOW_TECHNICAL_DESIGN_EN.md  architecture_audit.md  auto-stage-move-rules.md  candidate_comments_refactor_tasks.md  di.md  (+11 more)
(+3082 files in other folders)
